@@ -1,3 +1,7 @@
+2006-09-08 Jens Tkotz <jens@peino.de> 1.5.5-svn-b6
+
+ * Fix: Added additional --keyword in xgettext calls to support gettext 0.15
+
 2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b5
 
  * Fix: Preloading fix from b1 was not fully correct.
